CSS fix for facet truncation

--- a/01UTC_INST-01UTC/css/custom1.css
+++ b/01UTC_INST-01UTC/css/custom1.css
@@ -1,3 +1,32 @@
+/* facets display */
+/* wrap overflow text in facets */
+prm-facet-exact .section-content .md-chips .md-chip .md-chip-content {
+  overflow: visible;
+  margin-bottom: 0.5em;
+  width: 100%;
+}
+prm-facet-exact .md-chips .md-chip {
+  line-height: normal;
+  height: auto;
+}
+prm-facet-exact .md-chips .md-chip .md-chip-content strong {
+  white-space: normal;
+  overflow: visible;
+}
+prm-facet-exact .section-content .md-chips .md-chip .md-chip-remove-container {
+  height: 28px;
+  align-items: center;
+  align-self: center;
+  top: -5px;
+}
+prm-facet-exact .section-content .md-chips .md-chip strong+span {
+  margin-left: auto;
+  align-self: center;
+}
+prm-facet .sidebar-inner-wrapper {
+  margin-right: 0;
+}
+
 /* database suggesting */
 prm-resource-recommender md-card {
   background-color: white;
@@ -6,12 +35,6 @@ prm-resource-recommender md-card {
   border-left: 2px solid lightcyan;
   border-right: 2px solid darkgray;
 }
-/* truncate paren numbers in facets */
-.text-rtl {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
 /* to from on pub date */
 md-input-container.md-input-has-value label:not(.md-no-float) {
     opacity: 1;
